tket/qis-compiler/rust/snapshots/selene_hugr_qis_compiler__gpu__test__gpu_codegen@llvm21_call_ret_float.snap
---
source: tket/qis-compiler/rust/gpu.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@arg_types = private unnamed_addr constant [3 x i8] c":f\00", align 1
@no_gpu_error = private unnamed_addr constant [27 x i8] c"No error message available\00", align 1

define internal i64 @_hl.main.1(i64 %0, i64 %1) !dbg !3 {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %gpu_input_blob = alloca [0 x i8], align 1, !dbg !8
  %2 = call i8 @gpu_call(i64 %0, i64 %1, i64 0, ptr %gpu_input_blob, ptr @arg_types), !dbg !8
  call void @validate_gpu_response(i8 %2), !dbg !8
  ret i64 %0
}

declare i8 @gpu_call(i64, i64, i64, ptr, ptr)

; Function Attrs: noinline
define void @validate_gpu_response(i8 %0) #0 {
entry:
  %success = icmp ne i8 %0, 0, !dbg !8
  br i1 %success, label %ok, label %err, !dbg !8

ok:                                               ; preds = %entry
  ret void, !dbg !8

err:                                              ; preds = %entry
  call void @gpu_error_handler(), !dbg !8
  unreachable, !dbg !8
}

; Function Attrs: noinline
define void @gpu_error_handler() #0 {
entry:
  %error_message = call ptr @gpu_get_error(), !dbg !8
  %is_null = icmp eq ptr %error_message, null, !dbg !8
  %error_message_nonnull = select i1 %is_null, ptr @no_gpu_error, ptr %error_message, !dbg !8
  call void @panic_str(i32 70002, ptr %error_message_nonnull), !dbg !8
  unreachable, !dbg !8
}

declare ptr @gpu_get_error()

; Function Attrs: noreturn
declare void @panic_str(i32, ptr) #1

attributes #0 = { noinline }
attributes #1 = { noreturn }

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7, !7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
